# m8flow-bpmn-core

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  sample.env
.github/: dependabot.yml
alembic/: env.py
doc/: README.md  api.md  examples.md  gaps.md  package.md  sample_app.md  scheduling.md  service_tasks.md  usage.md
examples/: _postgres_example_launcher.sh  celery_scheduler_poc.py  celery_scheduler_worker.ps1  celery_scheduler_worker.sh  celery_timer_poc.ps1  celery_timer_poc.py  celery_timer_poc.sh  conditional_approval_poc.ps1  conditional_approval_poc.py  conditional_approval_poc.sh  conditional_approval_rejection_poc.ps1  conditional_approval_rejection_poc.py  conditional_approval_rejection_poc.sh  errors_demo.py  parallel_review_poc.py  scheduled_boundary_timer_poc.ps1  scheduled_boundary_timer_poc.py  scheduled_boundary_timer_poc.sh  scheduled_cycle_timer_poc.ps1  scheduled_cycle_timer_poc.py  scheduled_cycle_timer_poc.sh  scheduled_retry_poc.ps1  scheduled_retry_poc.py  scheduled_retry_poc.sh  scheduled_timer_poc.ps1  scheduled_timer_poc.py  scheduled_timer_poc.sh  service_task_connector_poc.ps1  service_task_connector_poc.py  service_task_connector_poc.sh  (+3 more)
sample_app/: README.md  alembic.ini  pyproject.toml
sample_app/alembic/: env.py
sample_app/alembic/versions/: 20260706_0001_create_library_baseline.py  20260706_0002_add_secret_table.py  README.md
sample_app/docs/: README.md  scheduler.md
sample_app/fixtures/: sample_app_demo.bpmn  sample_app_demo.dmn  sample_app_review_timeout_escalation.bpmn
sample_app/scripts/: run_sample_app.ps1  run_sample_app.sh  stage_local_wheel.ps1  stage_local_wheel.sh  update_local_wheel_metadata.py
sample_app/src/m8flow_sample_app/: __init__.py  __main__.py  app.py  auth.py  db.py  keycloak_login.py  models.py  scheduler.py  secrets.py  seed.py  service_tasks.py  settings.py  shared_m8flow.py  ui.py  web.py
sample_app/src/m8flow_sample_app/views/: __init__.py  process_definitions.py  process_instances.py  secrets.py  tasks.py
sample_app/src/m8flow_sample_app/workflows/: __init__.py  deploy.py  instances.py  start.py  tasks.py
sample_app/tests/: test_backend_catalog.py  test_end_to_end.py  test_migrations.py  test_service_tasks.py  test_shared_login.py  test_shared_m8flow.py  test_ui.py  test_update_local_wheel_metadata.py
(+107 files in other folders)
