[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "m8flow-bpmn-core"
version = "0.1.0"
description = "Core BPMN engine scaffolding for M8Flow."
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  "alembic>=1.16,<2.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "spiffworkflow>=3.1.2,<4.0",
]

[project.optional-dependencies]
postgresql = ["psycopg[binary]>=3.2,<4.0"]
mysql = ["pymysql>=1.1,<2.0"]

[dependency-groups]
dev = [
  "mypy>=1.11,<2.0",
  "pre-commit>=4.0,<5.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/m8flow_bpmn_core"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
